oidc-client-demo/namespace-oidc-client-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oidc-client-demo
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/manifest-id: e7903a2861ca53bd
