oidc-client-demo/deployment-demo-resare-com.yaml
# Source: demo.resare.com
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-resare-com
  labels:
    app: demo-resare-com
  namespace: oidc-client-demo
  annotations:
    noa.re/manifest-id: a8a04a74d6eb685a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-resare-com
  template:
    metadata:
      labels:
        app: demo-resare-com
      annotations:
        checksum/config: d90e4a5c278af27d2e2b277b8b95ff23de0e058883e1b6446d0f22ffc6f7698e
    spec:
      containers:
      - name: demo-resare-com
        image: repo.noa.re/oidc-client-demo:0.1.0-14717f44
        args:
        - -c
        - /config/config.toml
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: demo-resare-com-config
          mountPath: /config
        - name: secret
          mountPath: /secret
        - name: random-secrets
          mountPath: /random-secrets
      volumes:
      - name: demo-resare-com-config
        configMap:
          name: demo-resare-com-config
      - name: secret
        secret:
          secretName: secret
      - name: random-secrets
        secret:
          secretName: demo-resare-com
