oidc-client-demo/service-demo-resare-com.yaml
# Source: demo.resare.com
apiVersion: v1
kind: Service
metadata:
  name: demo-resare-com
  namespace: oidc-client-demo
  annotations:
    noa.re/manifest-id: 0cff4e086cc21a45
spec:
  selector:
    app: demo-resare-com
  ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
    targetPort: https
