oidc-client-demo/gateway-demo-resare-com.yaml
# Source: demo.resare.com
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-resare-com
  namespace: oidc-client-demo
  annotations:
    noa.re/manifest-id: 549778ba3a2ec56e
spec:
  gatewayClassName: eg
  listeners:
  - name: demo-resare-com
    protocol: HTTPS
    hostname: demo.resare.com
    port: 443
    tls:
      certificateRefs:
      - name: demo-resare-com-tls
        group: ''
        kind: Secret
